# codin-game-challenges

./: .gitignore  README.md  pyproject.toml
challenges/2024_winter/: README.md  graph.html  notebook.ipynb  solution.py
challenges/2024_winter/inputs/: wood_3.txt
