[tool.poetry]
name = "codin-game-challenges"
version = "0.1.0"
description = ""
authors = ["ThatDevShparki <shparki@thatdev.io>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.2"
pandas = "^1.2.4"
scipy = "^1.6.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
