[tool.poetry]
name = "codin-game-challenges"
version = "0.1.0"
description = ""
authors = ["ThatDevShparki <shparki@thatdev.io>"]
readme = "README.md"
package-mode = false

[tool.ruff.lint]
select = ["F", "I"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.20.2"
pandas = "^1.2.4"
scipy = "^1.6.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"
jupyterlab = "^4.3.4"
matplotlib = "^3.10.0"
networkx = "^3.4.2"
ipympl = "^0.9.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
